--- a/package.json
+++ b/package.json
@@ -12,10 +12,18 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/geolocation": "^2.0.2",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/drawer": "^5.9.0",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
     "city-state-country": "^1.0.3",
     "react": "16.13.1",
     "react-native": "0.63.2",
-    "react-native-animatable": "^1.3.3"
+    "react-native-animatable": "^1.3.3",
+    "react-native-gesture-handler": "^1.7.0",
+    "react-native-reanimated": "^1.13.0",
+    "react-native-safe-area-context": "^3.1.4",
+    "react-native-screens": "^2.10.1"
   },
   "devDependencies": {
     "@babel/core": "7.11.1",
