--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/drawer": "^5.9.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "axios": "^0.19.2",
     "city-state-country": "^1.0.3",
     "react": "16.13.1",
     "react-native": "0.63.2",
