--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react-native": "0.63.2",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-paper": "^4.0.1",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-vector-icons": "^7.0.0",
     "sync-storage": "^0.4.2"
   },
   "devDependencies": {
